<resources>
    <string name="app_name">MyChrono</string>
    <string name="placeholder_time">00:00:00</string>
    <string name="start_button">▶️</string>
    <string name="stop_button">⏹️</string>
    <string name="reset_button">🔁</string>
    <string name="pause_button">⏸️</string>
    <string name="flag_button">🏁</string>
    <string name="flagged_time">1\n2\n3\n4\n5\n6\n7\n8\n9\n10</string>
    <string name="begin_time">Inizio:</string>
</resources>