<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="24dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">

            <Chronometer
                android:id="@+id/chronoText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="70sp"
                android:textAlignment="center"
                android:padding="12dp" />

            <TextView
                android:id="@+id/beginTimeText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/begin_time"
                android:gravity="center"
                android:textSize="24sp"
                android:padding="6dp" />

            <TextView
                android:id="@+id/flagsText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/flagged_time"
                android:gravity="center"
                android:textSize="24sp"
                android:padding="12dp" />
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <Button
            android:id="@+id/resetButton"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reset_button"
            android:textSize="42sp"
            android:padding="24dp"
            android:visibility="gone" />

        <Button
            android:id="@+id/stopButton"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stop_button"
            android:textSize="42sp"
            android:padding="24dp"
            android:visibility="gone" />

        <Button
            android:id="@+id/startButton"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start_button"
            android:textSize="42sp"
            android:padding="24dp"
            android:visibility="visible" />

        <Button
            android:id="@+id/flagButton"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/flag_button"
            android:textSize="42sp"
            android:padding="24dp"
            android:visibility="gone" />

        <Button
            android:id="@+id/pauseButton"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pause_button"
            android:textSize="42sp"
            android:padding="24dp"
            android:visibility="gone" />
    </LinearLayout>
</LinearLayout>
